front end pages

--- a/style.css
+++ b/style.css
@@ -94,3 +94,23 @@ body{
     font-size:30px;
     background-color: lightsalmon;
 }
+
+/*.editCommentButton{*/
+/*    font-size:30px;*/
+/*    background-color: palegreen;*/
+/*}*/
+
+/*.removeCommentButton{*/
+/*    font-size:30px;*/
+/*    background-color: lightsalmon;*/
+/*}*/
+
+/*.viewCommentsButton{*/
+/*    font-size:30px;*/
+/*    background-color: palegreen;*/
+/*}*/
+
+/*.addCommentButton{*/
+/*    font-size:30px;*/
+/*    background-color: cornflowerblue;*/
+/*}*/
